<resources>
    <string name="app_name">MagicABC</string>

    <!-- 加载状态相关 -->
    <string name="view_empty">没有数据~</string>
    <string name="view_network_error">网络异常~</string>
    <string name="view_no_network">没有网络~</string>

    <string name="load_success">加载成功</string>
    <string name="message_transition_name">transition_reveal</string>
    <string name="me_transition_name">transition_reveal_me</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="share">分享</string>
    <string name="about">关于</string>
    <string name="delete">删除</string>
    <string name="search">搜索</string>
    <string name="loading">努力加载中…</string>
    <string name="load_fail">加载失败，请检查网络后重试</string>
    <string name="local_music">我的音乐</string>
    <string name="online_music">在线音乐</string>
    <string name="unknown">未知</string>
    <string name="delete_music">删除%s？</string>
    <string name="setting_ringtone_success">设置铃声成功</string>
    <string name="no_local_music">暂无本地音乐</string>
    <string name="song_list_item_title_1">1.%1$s - %2$s</string>
    <string name="song_list_item_title_2">2.%1$s - %2$s</string>
    <string name="song_list_item_title_3">3.%1$s - %2$s</string>
    <string name="mode_loop">列表循环</string>
    <string name="mode_shuffle">随机播放</string>
    <string name="mode_one">单曲循环</string>
    <string name="play_time_start">00:00</string>
    <string name="now_play">正在播放：%s</string>
    <string name="now_download">正在下载：%s</string>
    <string name="download_success">%s下载完成</string>
    <string name="recent_update">最近更新：%s</string>
    <string name="unable_to_play">暂时无法播放</string>
    <string name="unable_to_download">暂时无法下载</string>
    <string name="unable_to_share">暂时无法分享</string>
    <string name="artist_info">歌手信息</string>
    <string name="artist_info_name">姓名：%s</string>
    <string name="artist_info_country">国籍：%s</string>
    <string name="artist_info_constellation">星座：%s</string>
    <string name="artist_info_stature">身高：%scm</string>
    <string name="artist_info_weight">体重：%skg</string>
    <string name="artist_info_birth">生日：%s</string>
    <string name="artist_info_intro">简介：%s</string>
    <string name="artist_info_empty">暂无歌手信息</string>
    <string name="share_music">我用%1$s分享了歌曲《%2$s》%3$s</string>
    <string name="search_tips">歌曲名、歌手名</string>
    <string name="search_empty">未找到相关结果</string>
    <string name="menu_search">在线搜索</string>
    <string name="menu_setting">功能设置</string>
    <string name="menu_share">推荐给朋友</string>
    <string name="menu_about">关于波尼音乐</string>
    <string name="menu_night">夜间模式</string>
    <string name="menu_timer">定时停止播放</string>
    <string name="menu_exit">退出应用</string>
    <string name="setting_key_mobile_network_play">mobile_network_play</string>
    <string name="setting_key_mobile_network_download">mobile_network_download</string>
    <string name="setting_key_sound_effect">sound_effect</string>
    <string name="network">网络</string>
    <string name="mobile_network_play">使用移动网络播放</string>
    <string name="mobile_network_download">使用移动网络下载</string>
    <string name="play">播放</string>
    <string name="sound_effect">音效调节</string>
    <string name="tips">温馨提示</string>
    <string name="play_tips">当前处于移动网络，确定打开移动网络播放开关吗？</string>
    <string name="play_tips_sure">立即打开</string>
    <string name="download_tips">当前处于移动网络，下载将消耗较多流量，是否继续下载？</string>
    <string name="download_tips_sure">继续下载</string>
    <string name="device_not_support">您的设备不支持此功能</string>
    <string name="weather_temp">%s°</string>
    <string name="weather_wind">%1$s风%2$s级&#160;&#160;湿度%3$s%%</string>
    <string name="timer_set">设置成功，将于%s分钟后关闭</string>
    <string name="timer_cancel">定时停止播放已取消</string>
    <string name="share_app">青春，狂热，放纵，自由，当我们带上耳机以后做回自己，这是音乐的魅力。%s：http://fir.im/ponymusic</string>
    <string name="copyright">Copyright © 2015&#045;%d SWUST</string>
    <string name="about_project_url">https://github.com/wangchenyan/PonyMusic</string>
    <string name="about_weibo">http://weibo.com/wangchenyan1993</string>
    <string name="about_jianshu">http://www.jianshu.com/users/3231579893ac</string>
    <string name="about_github">https://github.com/wangchenyan</string>
    <string name="no_permission">没有%1$s权限，无法%2$s！</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="ui_input_loginpwd">请输入密码</string>
    <string name="mine_input_phone">请输入手机号</string>
    <string name="forget_pd">忘记密码</string>
    <string name="register_login">注册登录</string>
    <string name="getcode">获取验证码</string>
    <string name="forget_state">请填写注册的手机号，我们将给您发送验证码</string>
    <string name="register_tint">注册表示同意</string>
    <string name="register_tint1"> 《用户协议》</string>
    <string name="register_gologin">已有账号直接登录</string>
    <string name="changeimg">更换头像</string>
    <string name="babynametint">宝贝昵称</string>
    <string name="babybirthday">宝贝生日</string>
    <string name="babysex">宝贝性别</string>
    <string name="nextstep">下一步</string>
    <string name="saveinfo">保存</string>
    <string name="confirm">确定</string>
    <string name="mine_input_code">请输入验证码</string>

</resources>
