<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"

    >
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        >

    <android.support.design.widget.AppBarLayout

        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="0dp"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:visibility="gone"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            />

        <include layout="@layout/include_main_bar"/>
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"

        android:background="@color/rgbe3e3e3"
        />



        <cn.com.magicabc.widget.ClearEditText
            android:id="@+id/et_phoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/xdp_37"

            android:layout_marginRight="@dimen/xdp_37"
            android:layout_marginTop="@dimen/xdp_63"
            android:background="@null"
            android:drawableLeft="@drawable/userphone"
            android:drawablePadding="@dimen/xdp_15"
            android:hint="@string/mine_input_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingBottom="@dimen/xdp_12"
            android:paddingTop="@dimen/xdp_12"
            android:textColor="@color/grey_333"
            android:textColorHint="@color/textcolortint"
            android:textCursorDrawable="@drawable/shape_edit_text"

            android:textSize="@dimen/xsp_14"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"

            android:layout_marginLeft="@dimen/xdp_37"
            android:layout_marginRight="@dimen/xdp_37"
            android:background="@color/userphoneline"
            />

        <cn.com.magicabc.widget.ClearEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/xdp_37"
            android:layout_marginRight="@dimen/xdp_37"

            android:background="@null"
            android:drawableLeft="@drawable/passwd"
            android:drawablePadding="@dimen/xdp_15"
            android:hint="@string/ui_input_loginpwd"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingBottom="@dimen/xdp_12"
            android:paddingTop="@dimen/xdp_12"
            android:textColor="@color/grey_333"
            android:textColorHint="@color/textcolortint"
            android:textCursorDrawable="@drawable/shape_edit_text"

            android:textSize="@dimen/xsp_14"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/xdp_37"
            android:layout_marginRight="@dimen/xdp_37"
            android:background="@color/userphoneline"
            />

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/xdp_37"
            android:layout_marginRight="@dimen/xdp_37">

            <EditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableLeft="@drawable/code"
                android:drawablePadding="@dimen/xdp_15"
                android:hint="@string/mine_input_code"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingBottom="@dimen/xdp_12"
                android:paddingTop="@dimen/xdp_12"
                android:textColor="@color/grey_333"
                android:textColorHint="@color/textcolortint"
                android:textCursorDrawable="@drawable/shape_edit_text"

                android:textSize="@dimen/xsp_14"
                />

            <TextView
                android:id="@+id/tv_getcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/getcode"
                android:textColor="@color/green"
                android:textSize="@dimen/xsp_14"/>


        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/xdp_37"
            android:layout_marginRight="@dimen/xdp_37"
            android:background="@color/userphoneline"
            />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/xdp_44"
            android:layout_marginLeft="@dimen/xdp_37"
            android:layout_marginRight="@dimen/xdp_37"
            android:layout_marginTop="@dimen/xdp_31"
            android:background="@drawable/btn_background_login"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/xsp_15"/>

        <LinearLayout
            android:id="@+id/ll_userfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="@dimen/xdp_37"
            android:layout_marginRight="@dimen/xdp_37"
            android:layout_marginTop="@dimen/xdp_20">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:lines="1"
                android:text="@string/register_tint"
                android:textColor="@color/textcolortint"
                android:textSize="@dimen/xsp_14"
                />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:lines="1"

                android:text="@string/register_tint1"
                android:textColor="#F5A623"
                android:textSize="@dimen/xsp_14"
                />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/register_gologin"
            android:textColor="@color/grey_333"

            android:textSize="@dimen/xsp_14"
            />

        <ImageView
            android:layout_width="@dimen/xdp_7"
            android:layout_height="@dimen/xdp_7"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/xdp_8"
            android:src="@drawable/arrow"
            />


    </LinearLayout>
</RelativeLayout>
