<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="0dp"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:visibility="gone"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            />

        <include layout="@layout/include_main_bar" />
    </android.support.design.widget.AppBarLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"

        android:background="@color/rgbe3e3e3"
        />
    <cn.com.magicabc.widget.ClearEditText
        android:drawablePadding="@dimen/xdp_15"
        android:id="@+id/et_phoneNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_line"
        android:layout_marginLeft="@dimen/xdp_37"
        android:layout_marginRight="@dimen/xdp_37"
        android:layout_marginTop="@dimen/xdp_63"
        android:background="@null"
        android:drawableLeft="@drawable/userphone"
        android:hint="@string/mine_input_phone"
        android:inputType="phone"
        android:maxLength="11"
        android:paddingBottom="@dimen/xdp_12"
        android:paddingTop="@dimen/xdp_12"
        android:textColor="@color/grey_333"
        android:textCursorDrawable="@drawable/shape_edit_text"
        android:textColorHint="@color/textcolortint"

        android:textSize="@dimen/xsp_14"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"

        android:layout_marginLeft="@dimen/xdp_37"
        android:layout_marginRight="@dimen/xdp_37"
        android:background="@color/userphoneline"
        />

    <cn.com.magicabc.widget.ClearEditText
        android:drawablePadding="@dimen/xdp_15"
        android:textCursorDrawable="@drawable/shape_edit_text"
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_phoneNum"
        android:layout_marginLeft="@dimen/xdp_37"
        android:layout_marginRight="@dimen/xdp_37"
        android:background="@null"
        android:hint="@string/ui_input_loginpwd"
        android:inputType="textPassword"
        android:maxLength="16"
        android:drawableLeft="@drawable/passwd"
        android:paddingBottom="@dimen/xdp_12"
        android:paddingTop="@dimen/xdp_12"
        android:textColor="@color/grey_333"
        android:textColorHint="@color/textcolortint"

        android:textSize="@dimen/xsp_14"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/xdp_37"
        android:layout_marginRight="@dimen/xdp_37"
        android:background="@color/userphoneline"
        />

    <TextView
        android:id="@+id/tv_login"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/login"
        android:textSize="@dimen/xsp_15"
        android:layout_marginTop="@dimen/xdp_31"
        android:background="@drawable/btn_background_login"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/xdp_37"
        android:layout_marginRight="@dimen/xdp_37"
        android:layout_height="@dimen/xdp_44"/>
    <RelativeLayout
        android:layout_marginTop="@dimen/xdp_20"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/xdp_84"
        android:layout_marginRight="@dimen/xdp_84"
        android:layout_height="wrap_content">
<TextView
    android:id="@+id/tv_forget"
    android:textSize="@dimen/xsp_14"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/forget_pd"
android:layout_alignParentLeft="true"
    android:textColor="@color/grey_333"
    />
<View
    android:layout_width="@dimen/xdp_1"
    android:layout_height="@dimen/xdp_10"
    android:layout_centerInParent="true"
    android:background="@color/userphoneline"
    />
        <TextView
            android:id="@+id/tv_register"
            android:textColor="@color/grey_333"
            android:textSize="@dimen/xsp_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_login"
android:layout_alignParentRight="true"
            />

    </RelativeLayout>
</LinearLayout>

